@@ -2,4 +2,3 @@
                     inout  z,
                            ^
                         ... See the manual and http://www.veripool.org/verilator for more assistance.
-%Error: Command Failed
