@@ -1,2 +1,1 @@
 %Error: Can't read t/t_NOT_FOUND
-%Error: Command Failed
